--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,7 +1,22 @@
+// frontend/tsconfig.json
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+  "compilerOptions": {
+    "target": "es2021",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true, // Якщо використовується bundler (Vite, Webpack)
+    "jsx": "react-jsx" // <-- Обов'язково
+  },
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
